--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <hr>
     <h2 align="center">Our Projects:</h2>
     <a href="younggames.github.io/Thud">Thud</a> a Discworld game<br>
-    <a href="younggames.github.io/Spaces-Shooter">Space-Shooter</a> a Spacewar game<br>
+    <a href="younggames.github.io/Spaces-Shooter.jar">Space-Shooter</a> a Spacewar game<br>
   </body>
 </html>
