--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1 align="center">YoungGames</h1>
     <hr>
     <h2 align="center">Our Projects:</h2>
-    <a href="younggames.github.io/Thud">Thud</a> a Discworld game<br>
-    <a href="younggames.github.io/Space-Shooter.jar">Space-Shooter</a> a Spacewar game<br>
+    <a href="http://younggames.github.io/Thud">Thud</a> a Discworld game<br>
+    <a href="http://younggames.github.io/Space-Shooter.jar">Space-Shooter</a> a Spacewar game<br>
   </body>
 </html>
